# readex-scorep

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  OPEN_ISSUES  README  README.md  THANKS  aclocal.m4  configure  configure.ac
build-backend/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  scorep_oa_parser.c  scorep_oa_scanner.c  scorep_oa_scanner.h
build-config/: VERSION
build-config/m4/: ac_cxx_have_strstream.m4  ac_cxx_namespaces.m4  scorep_check_preincludes.m4  scorep_cobi.m4  scorep_compiler_constructor.m4  scorep_compiler_instrumentation.m4  scorep_cray_pmi.m4  scorep_cube4.m4  scorep_cuda.m4  scorep_dirent.m4  scorep_error_codes.m4  scorep_fortran.m4  scorep_gcc_plugin.m4  scorep_instrumentation_flags.m4  scorep_library_wrapping.m4  scorep_link_flags.m4  scorep_memory.m4  scorep_metrics.m4  scorep_mic.m4  scorep_mpi.m4  scorep_omp_ancestry.m4  scorep_omp_tpd.m4  scorep_online_access.m4  scorep_openacc.m4  scorep_opencl.m4  scorep_openmp.m4  scorep_pthread.m4  scorep_sampling.m4  scorep_shmem.m4  scorep_sys_detection_names.m4  scorep_thread_local_storage.m4  scorep_timer.m4
build-frontend/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
build-gcc-plugin/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
build-includes/: backend-only.am  common.am  compute-node-mpi.m4  compute-node-shmem.m4  compute-node.m4  front-and-backend.am  frontend-only.am  login-node.m4  mpi-backend-only.am  shmem-backend-only.am
build-libwrap/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
build-mpi/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  scorep_oa_parser.c  scorep_oa_scanner.c  scorep_oa_scanner.h
build-score/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
build-shmem/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
doc/: Makefile.inc.am
doc/doxygen-dev/: doxygen-dev.cfg.in
doc/doxygen-user/: doxygen-user.cfg.in  main_6.dox.in  main_7.dox.in  main_8.dox.in  scorep_backend_info_help.dox.in  scorep_config_usage.dox.in  scorep_info_confvars_help.md  scorep_score_usage.dox.in  scorep_usage.dox.in
doc/profile/: scorep_metrics.html
doc/tags/: scorep.tag
include/scorep/: SCOREP_PublicHandles.h  SCOREP_PublicTypes.h  SCOREP_SubstrateEvents.h  SCOREP_SubstratePlugins.h
share/: scorep.errors  scorep.spec.in
share/bg-gnu/: platform-backend-user-provided  platform-frontend-user-provided  platform-mpi-user-provided  platform-shmem-user-provided
src/: Makefile.inc.am  config-backend-for-frontend.h.in  config-backend-mpi.h.in  config-backend-shmem.h.in  config-backend.h.in  config-custom.h  config-frontend.h.in  config-gcc-plugin.h.in  config-libwrap.h.in  config-score.h.in
src/adapters/compiler/: Makefile.confvars.inc.am  Makefile.inc.am  SCOREP_Compiler_Init.c  SCOREP_Compiler_Init.h  scorep_compiler_confvars.c  scorep_compiler_confvars.inc.c  scorep_compiler_cray.c  scorep_compiler_data.c  scorep_compiler_data.h  scorep_compiler_gcc_plugin.c  scorep_compiler_gcc_plugin.h  scorep_compiler_gcc_plugin_init.c  scorep_compiler_gnu.c  scorep_compiler_gnu.inc.c  (+14 more)
src/measurement/: Makefile.common.inc.am  Makefile.confvars.inc.am  Makefile.inc.am  SCOREP_Config.c  SCOREP_Events.c  SCOREP_Libwrap.c  SCOREP_Memory.c  SCOREP_RuntimeManagement.c  SCOREP_Task.c  scorep_clock_synchronization.c  scorep_constructor.c  scorep_definition_cube4.c  scorep_definition_cube4.h  scorep_environment.c  scorep_environment.h  scorep_location.c  scorep_location.h  scorep_paradigms.c  scorep_properties.c  scorep_properties.h  scorep_runtime_management.c  scorep_runtime_management.h  scorep_runtime_management_timings.h  scorep_status.c  scorep_status.h  scorep_subsystem.c  scorep_subsystem.h  scorep_system_tree.c  scorep_system_tree_sequence.c  scorep_system_tree_sequence.h  scorep_types.c  scorep_types.h  scorep_unify.c  scorep_unify_helpers.c  scorep_unify_helpers.h
test/: Makefile.inc.am  Makefile.mpi.inc.am  scorep_monolithic_subsystems.c
test/alignment/: Makefile.inc.am  alignment_test_c.c  alignment_test_f.F90
test/apart_test_suite/: Makefile.mpi.inc.am  run_apart_test_suite_with_oa_test.sh.in
test/constructor_checks/: Makefile.inc.am  constructor.c  generate_makefile.sh.in  run_constructor_checks.sh.in
test/filtering/: Makefile.inc.am  filter_test.c  run_filter_f_test.sh.in  run_filter_test.sh.in
test/hashtab/: Makefile.inc.am  hashtab_test.c
test/instrumenter_checks/: Makefile.common_rules.in  Makefile.inc.am  Makefile.instrument_configurations.in  check-instrumentation.sh.in  instrumenter-configurations.sh.in
test/ipc/: Makefile.shmem.inc.am
test/jacobi/: Makefile.inc.am  Makefile.mpi.inc.am
test/libwrap/: Makefile.inc.am
test/measurement/: Makefile.inc.am
test/memory/: Makefile.inc.am  scorep_allocator_test.c
test/mpi_omp/: Makefile.mpi.inc.am  mpi_omp_hello_world.c.opari.inc  mpi_omp_hello_world.mod.c  run_metric_collection_test.sh.in  run_mpi_omp_sequence_definition_test.sh.in  sequence_definition_test.c.opari.inc  sequence_definition_test.opari.c
test/omp/: Makefile.inc.am  internal_thread_handling.c  omp_test.c.opari.inc  omp_test.mod.c  omp_test_nested.c.opari.inc  omp_test_nested.mod.c
test/omp_tasks/: Makefile.inc.am  omp_tasks.c.opari.inc  omp_tasks.mod.c  run_fibonacci_test.sh.in  run_omp_tasks.sh  run_omp_tasks_profile.sh  run_single_loop_test.sh.in
test/profiling/: Makefile.inc.am  run_format_omp_test.sh  run_format_serial_test.sh  run_profile_depth_limit_test.sh  run_profile_depth_limit_test.sh.in  task_migration_test.c
test/rewind/: run_rewind_test.sh.in
test/serial/: region_types_consistency.c  run_region_types_consistency_check.sh
test/shmem/: Makefile.shmem.inc.am
test/unification/: Makefile.inc.am  run_serial_sequence_definitions_test.sh.in  unification_test.c
tools/oa_registry/: Makefile.inc.am  regsrv.cc  regsrv.h  regsrv_client.cc  regsrv_client.h  regsrv_sockets.c  regsrv_sockets.h  scenario_mpi  scenario_serial  scorep_oa_registry_protocol.h  stringutil.cc  stringutil.h  strutil.c  strutil.h
(+595 files in other folders)
